--- a/main.css
+++ b/main.css
@@ -3,9 +3,9 @@
     background-color: rgb(185, 224, 241);
 }
 
-.header{
+.head{
     background-color: rgb(185, 224, 241);
-    height: 200px;
+    height: 120px;
     text-align: center;
 
     border: 1px solid black;
