--- a/sub.css
+++ b/sub.css
@@ -1,9 +1,9 @@
-#identity{
+#identity {
     text-align: right;
     background-color: rgb(185, 224, 241);
 }
 
-.head{
+.head {
     background-color: rgb(185, 224, 241);
     height: 120px;
     text-align: center;
@@ -11,13 +11,13 @@
     border: 1px solid black;
 }
 
-.container{
+.container {
     display: flex;
 }
 
-.navigation{
+.navigation {
     float: left;
-    width:15%;
+    width: 15%;
     border: 1px solid black;
     height: 740px;
     background-color: bisque;
@@ -25,19 +25,35 @@
 
 }
 
-.navigation_bottom{
-    margin-top: 380px;
-    padding-left: 20px
+.navigation_bottom {
+    margin-top: 300px;
+    padding-left: 20px;
 }
 
-.main_sector{
+.main_sector {
     float: left;
-    width:100%;
+    width: 100%;
     border: 1px solid black;
     flex: 1;
     background-color: rgb(178, 241, 220);
+    padding-left: 20px;
+    line-height: 2;
+
+
 }
 
-ol{
+#diode_sector {
+    background-image: url(image/circuit.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+h2 {
+    padding-left: 60px;
+    padding-top: 20px;
+}
+
+ol {
     line-height: 3;
 }
